# docviz-backend

./: .gitignore  azure-pipelines.yml  config.ini  dockerfile  pyproject.toml  render.yaml  runserver.py
app/: config.py  main.py
app/auth/: auth_handlers.py  dependencies.py  handlers.py  jwt.py  session_handlers.py
app/common/database/: __init__.py  mongo.py
app/common/logging/: logger.py
app/common/middleware/: fastapi_middlewar.py
app/common/models/: files.py  session.py  sessions.py  users.py
app/common/schemas/: file_schema.py  logging_schema.py  openai_outout_schema.py  session_schema.py  user_schema.py
app/routes/: openai.py  session.py  uploadfile.py  user.py  utils.py
app/services/: uploadfile.py
app/services/langchain/: callback_handler.py  chain.py  llm.py  summary.py  utils.py
app/services/prompt/: summary_prompt.py
