[tool.poetry]
name = "docviz"
version = "0.1.0"
description = ""
authors = ["tariqamarneh <tariqs.naser@gmail.com>"]
readme = "README.md"
packages = [{include = 'app'}]


[tool.poetry.dependencies]
python = "^3.12"
pymongo = "^4.7.2"
motor = "^3.4.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "runserver:dev"
start = "runserver:start"